# genetic-algorithm

./: CMakeLists.txt  README.md
GA_test/: CMakeLists.txt  test.cpp
include/: ga.h  genetic.h  genome.h  random_generator.h  selector.h
src/: random_generator.cpp  selector.cpp
